load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "buffer.go",
        "cache.go",
    ],
    importpath = "github.com/hawkingrei/greenhouse/diskcache",
    visibility = ["//visibility:public"],
    deps = [
        "//compress:go_default_library",
        "//diskutil:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cache_test.go"],
    embed = [":go_default_library"],
)
