load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["diskutil.go"],
    importpath = "github.com/hawkingrei/greenhouse/diskutil",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/djherbis/atime:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
